--- a/about.html
+++ b/about.html
@@ -115,51 +115,28 @@
         <div class="container">
           <div class="row g-5 align-items-center">
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-              <div class="row g-0 about-bg rounded overflow-hidden">
-                <div class="col-6 text-start">
-                  <img class="img-fluid w-100" src="img/about-1.jpg" />
-                </div>
-                <div class="col-6 text-start">
-                  <img
+                <img
                     class="img-fluid"
-                    src="img/about-2.jpg"
-                    style="width: 85%; margin-top: 15%"
+                    src="img/about_img.jpg"
+                    style="width: 100%; margin-top: 5%"
                   />
-                </div>
-                <div class="col-6 text-end">
-                  <img
-                    class="img-fluid"
-                    src="img/about-3.jpg"
-                    style="width: 85%"
-                  />
-                </div>
-                <div class="col-6 text-end">
-                  <img class="img-fluid w-100" src="img/about-4.jpg" />
-                </div>
-              </div>
             </div>
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
               <h1 class="mb-4">
                 We Help To Get The Best Job And Find A Talent
               </h1>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
+                Welcome to Say Yes to Careers Buffalo! We are a dynamic partnership dedicated to breaking down barriers and creating opportunities for students in public and charter schools in Buffalo, NY. Our mission is to remove obstacles to education attainment, workforce participation, and economic mobility, with a focus on racial equity and inclusion.
               </p>
               <p>
-                <i class="fa fa-check text-primary me-3"></i>Tempor erat elitr
-                rebum at clita
+                <i class="fa fa-check text-primary me-3"></i>We empower Say Yes to Education Buffalo Scholars and Alumni to achieve fulfilling professional employment.
               </p>
               <p>
-                <i class="fa fa-check text-primary me-3"></i>Aliqu diam amet
-                diam et eos
+                <i class="fa fa-check text-primary me-3"></i>Committed to collecting data that not only helps us secure future grants but also enables us to measure economic stability and mobility.
               </p>
               <p>
-                <i class="fa fa-check text-primary me-3"></i>Clita duo justo
-                magna dolore erat amet
+                <i class="fa fa-check text-primary me-3"></i>We strive to bridge the gap between talent and employers by creating a platform where Scholars and Alumni can easily access current job postings and engage directly with potential employers.
               </p>
-              <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
             </div>
           </div>
         </div>
