--- a/job-list.html
+++ b/job-list.html
@@ -289,10 +289,10 @@
                           <div class="col-sm-12 col-md-8 d-flex align-items-center">
                               <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-9.png" alt="" style="width: 80px; height: 80px;">
                               <div class="text-start ps-4">
-                                  <h5 class="mb-3">Exhibit Technician</h5>
+                                  <h5 class="mb-3">Scholar Recruiter</h5>
                                   <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
                                   <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
-                                  <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$65K</span>
+                                  <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$78K</span>
                               </div>
                           </div>
                           <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
@@ -300,10 +300,150 @@
                                   <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                   <a class="btn btn-primary" href="">Apply Now</a>
                               </div>
-                              <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Mar 18, 2024</small>
+                              <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Aug 30, 2023</small>
                           </div>
                       </div>
                   </div>
+                  <div class="job-item p-4 mb-4">
+                    <div class="row g-4">
+                        <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                            <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-10.png" alt="" style="width: 80px; height: 80px;">
+                            <div class="text-start ps-4">
+                                <h5 class="mb-3">Sales Development Representative</h5>
+                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$82K</span>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                            <div class="d-flex mb-3">
+                                <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                                <a class="btn btn-primary" href="">Apply Now</a>
+                            </div>
+                            <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Dec 18, 2023</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-item p-4 mb-4">
+                  <div class="row g-4">
+                      <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                          <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-11.png" alt="" style="width: 80px; height: 80px;">
+                          <div class="text-start ps-4">
+                              <h5 class="mb-3">Project Engineer</h5>
+                              <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                              <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                              <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$104K</span>
+                          </div>
+                      </div>
+                      <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                          <div class="d-flex mb-3">
+                              <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                              <a class="btn btn-primary" href="">Apply Now</a>
+                          </div>
+                          <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Nov 24, 2023</small>
+                      </div>
+                  </div>
+              </div>
+              <div class="job-item p-4 mb-4">
+                <div class="row g-4">
+                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                        <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-12.png" alt="" style="width: 80px; height: 80px;">
+                        <div class="text-start ps-4">
+                            <h5 class="mb-3">Electrician</h5>
+                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                            <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$67K</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                        <div class="d-flex mb-3">
+                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                            <a class="btn btn-primary" href="">Apply Now</a>
+                        </div>
+                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: May 13, 2024</small>
+                    </div>
+                </div>
+            </div>
+            <div class="job-item p-4 mb-4">
+              <div class="row g-4">
+                  <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                      <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-13.jpeg" alt="" style="width: 80px; height: 80px;">
+                      <div class="text-start ps-4">
+                          <h5 class="mb-3">Studio Manager</h5>
+                          <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                          <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                          <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$91K</span>
+                      </div>
+                  </div>
+                  <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                      <div class="d-flex mb-3">
+                          <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                          <a class="btn btn-primary" href="">Apply Now</a>
+                      </div>
+                      <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Sep 18, 2023</small>
+                  </div>
+              </div>
+          </div>
+          <div class="job-item p-4 mb-4">
+            <div class="row g-4">
+                <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                    <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-14.png" alt="" style="width: 80px; height: 80px;">
+                    <div class="text-start ps-4">
+                        <h5 class="mb-3">R&D Engineer</h5>
+                        <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                        <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$104K</span>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                    <div class="d-flex mb-3">
+                        <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                        <a class="btn btn-primary" href="">Apply Now</a>
+                    </div>
+                    <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Jan 19, 2024</small>
+                </div>
+            </div>
+        </div>
+        <div class="job-item p-4 mb-4">
+          <div class="row g-4">
+              <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                  <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-15.png" alt="" style="width: 80px; height: 80px;">
+                  <div class="text-start ps-4">
+                      <h5 class="mb-3">IT Technician</h5>
+                      <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                      <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                      <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$89K</span>
+                  </div>
+              </div>
+              <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                  <div class="d-flex mb-3">
+                      <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                      <a class="btn btn-primary" href="">Apply Now</a>
+                  </div>
+                  <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Feb 12, 2024</small>
+              </div>
+          </div>
+      </div>
+      <div class="job-item p-4 mb-4">
+        <div class="row g-4">
+            <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-16.png" alt="" style="width: 80px; height: 80px;">
+                <div class="text-start ps-4">
+                    <h5 class="mb-3">Chemist</h5>
+                    <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                    <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                    <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$76K</span>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                <div class="d-flex mb-3">
+                    <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                    <a class="btn btn-primary" href="">Apply Now</a>
+                </div>
+                <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: May 21, 2024</small>
+            </div>
+        </div>
+    </div>
       <!-- Jobs End -->
 
         <!-- Footer Start -->
