--- a/job-list.html
+++ b/job-list.html
@@ -122,7 +122,7 @@
                                 <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                     <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-6.png" alt="" style="width: 80px; height: 80px;">
                                     <div class="text-start ps-4">
-                                        <h5 class="mb-3">Marketing Manager</h5>
+                                        <h5 class="mb-3"><a href="job-detail.html"> Marketing Manager </a></h5>
                                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
                                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
                                         <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$120K</span>
